<?xml version="1.0"?>
<package format="2">
  <name>my_robot_project</name>
  <version>0.0.0</version>
  <description>A robot project implementing multiple libraries.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
</package>
