<?xml version="0.0"?>
<package format="3">
  <name>mapping_lib</name>
  <version>0.0.0</version>
  <description>Mapping library</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>my_robot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
