<?xml version="1.0"?>
<package format="2">
  <name>robot_control_lib</name>
  <version>0.0.1</version>
  <description>Robot control library</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
